default-iptables.save
# Generated by iptables-save v1.6.0 on Wed Nov 28 19:08:25 2018
*mangle
:PREROUTING ACCEPT [21005:3015369]
:INPUT ACCEPT [18351:2743317]
:FORWARD ACCEPT [2654:272052]
:OUTPUT ACCEPT [15534:2527025]
:POSTROUTING ACCEPT [18007:2785838]
COMMIT
# Completed on Wed Nov 28 19:08:25 2018
# Generated by iptables-save v1.6.0 on Wed Nov 28 19:08:25 2018
*nat
:PREROUTING ACCEPT [2898:176167]
:INPUT ACCEPT [985:53323]
:OUTPUT ACCEPT [436:25342]
:POSTROUTING ACCEPT [2150:135898]
:DOCKER - [0:0]
:DOCKER-INGRESS - [0:0]
COMMIT
# Completed on Wed Nov 28 19:08:25 2018
# Generated by iptables-save v1.6.0 on Wed Nov 28 19:08:25 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [131:40463]
:OUTPUT ACCEPT [30:1728]
:DOCKER-USER - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 22 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 80 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 443 -m conntrack --ctstate ESTABLISHED -j ACCEPT
COMMIT
# Completed on Wed Nov 28 19:08:25 2018
